// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarLeftOverlay rendering should not render a sidebar when sideBarVisibility is false 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={false}
    width="thin"
  >
    <Link
      href="/eng/"
      replace={false}
      to="/eng/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/eng/library"
      replace={false}
      to="/eng/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/eng/tasks"
      replace={false}
      to="/eng/tasks"
    >
      <MenuItem
        as="div"
        name="tasks"
        onClick={[Function]}
      >
        Tasks
      </MenuItem>
    </Link>
    <Link
      href="/eng/signin"
      replace={false}
      to="/eng/signin"
    >
      <MenuItem
        as="div"
        name="signin"
        onClick={[Function]}
      >
        Sign In
      </MenuItem>
    </Link>
  </Sidebar>
</div>
`;

exports[`SidebarLeftOverlay rendering should render a sidebar when sideBarVisibility is true 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  >
    <Link
      href="/eng/"
      replace={false}
      to="/eng/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/eng/library"
      replace={false}
      to="/eng/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/eng/tasks"
      replace={false}
      to="/eng/tasks"
    >
      <MenuItem
        as="div"
        name="tasks"
        onClick={[Function]}
      >
        Tasks
      </MenuItem>
    </Link>
    <Link
      href="/eng/signin"
      replace={false}
      to="/eng/signin"
    >
      <MenuItem
        as="div"
        name="signin"
        onClick={[Function]}
      >
        Sign In
      </MenuItem>
    </Link>
  </Sidebar>
</div>
`;

exports[`SidebarLeftOverlay rendering should render a sign in menu item when not authenticated 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  >
    <Link
      href="/eng/"
      replace={false}
      to="/eng/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/eng/library"
      replace={false}
      to="/eng/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/eng/tasks"
      replace={false}
      to="/eng/tasks"
    >
      <MenuItem
        as="div"
        name="tasks"
        onClick={[Function]}
      >
        Tasks
      </MenuItem>
    </Link>
    <Link
      href="/eng/signin"
      replace={false}
      to="/eng/signin"
    >
      <MenuItem
        as="div"
        name="signin"
        onClick={[Function]}
      >
        Sign In
      </MenuItem>
    </Link>
  </Sidebar>
</div>
`;

exports[`SidebarLeftOverlay rendering should render a sign out menu item when authenticated non-anonymously 1`] = `
<div>
  <Sidebar
    animation="overlay"
    as={[Function]}
    direction="left"
    icon="labeled"
    inverted={true}
    vertical={true}
    visible={true}
    width="thin"
  >
    <Link
      href="/eng/"
      replace={false}
      to="/eng/"
    >
      <MenuItem
        as="div"
        name="home"
        onClick={[Function]}
      >
        Home
      </MenuItem>
    </Link>
    <Link
      href="/eng/library"
      replace={false}
      to="/eng/library"
    >
      <MenuItem
        as="div"
        name="library"
        onClick={[Function]}
      >
        Library
      </MenuItem>
    </Link>
    <Link
      href="/eng/tasks"
      replace={false}
      to="/eng/tasks"
    >
      <MenuItem
        as="div"
        name="tasks"
        onClick={[Function]}
      >
        Tasks
      </MenuItem>
    </Link>
    <MenuItem
      as="div"
      name="logout"
      onClick={[Function]}
    >
      Sign Out
    </MenuItem>
  </Sidebar>
</div>
`;
